css layout styling updated

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   animation: fade-in 3s;
   line-height: 300%;
+  overflow-x: hidden;
 }
 
 .fade {
@@ -345,7 +346,7 @@ cite {
 
 .prop-image {  
   width: 40%;
-  display: block;
+  display: block; 
   margin: auto;
   margin-top: 30px;
 }
